[package]
name = "markdown-gen"
version = "1.0.1"
license = "MIT"
license-file = "LICENSE"
description = "Crate for generating Markdown files"
categories = ["encoding", "text-processing"]
keywords = ["markdown", "generator", "markdown-generator"]
repository = "https://github.com/ondralukes/markdown-gen-rs"
authors = ["ondralukes <mail@ondralukes.cz>"]
readme = "README.md"
exclude = [".github"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
